--- a/package.json
+++ b/package.json
@@ -23,9 +23,17 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "deepmerge": "^4.3.1",
     "electron-updater": "^6.3.9",
     "element-plus": "^2.11.1",
+    "exif-parser": "^0.1.12",
+    "exiftool-vendored": "^30.4.0",
+    "md5": "^2.3.0",
+    "mime-types": "^3.0.1",
+    "optional": "^0.1.4",
+    "p-limit": "^7.1.1",
     "pinia": "^3.0.3",
+    "sharp": "^0.34.3",
     "vue-router": "4"
   },
   "devDependencies": {
