【新增】选择文件夹读取时间线;

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "dev": "node scripts/pre_dev.mjs && electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -30,7 +30,6 @@
     "exiftool-vendored": "^30.4.0",
     "md5": "^2.3.0",
     "mime-types": "^3.0.1",
-    "optional": "^0.1.4",
     "p-limit": "^7.1.1",
     "pinia": "^3.0.3",
     "sharp": "^0.34.3",
@@ -41,6 +40,7 @@
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/node": "^22.14.1",
+    "@types/p-limit": "^2.2.0",
     "@vitejs/plugin-vue": "^5.1.3",
     "electron": "^34.3.2",
     "electron-builder": "^25.1.8",
