完成图片预览和自适应

--- a/.npmrc
+++ b/.npmrc
@@ -7,3 +7,5 @@ vue_cli_mirror=https://npmmirror.com/mirrors/@vue/cli/
 vuex_mirror=https://npmmirror.com/mirrors/vuex/
 axios_mirror=https://npmmirror.com/mirrors/axios/
 element_ui_mirror=https://npmmirror.com/mirrors/element-ui/
+sharp_binary_host=https://npmmirror.com/mirrors/sharp
+sharp_libvips_binary_host=https://cdn.npmmirror.com/binaries/sharp-libvips
